# NB-Classify

./: CMakeLists.txt  README.md  demo.sh  tools.h
demo/: CMakeLists.txt
demo/client/: main.cpp
demo/cs/: main.cpp
demo/mp/: main.cpp
demo/ta/: main.cpp
doc/: Doxyfile
nbc/: CMakeLists.txt
nbc/nbc_client/: CMakeLists.txt  nbc_client.cpp  nbc_client.hpp  nbc_client_cs_client.cpp  nbc_client_cs_client.hpp  nbc_client_dataset.cpp  nbc_client_dataset.hpp  nbc_client_result_thread.cpp  nbc_client_result_thread.hpp  nbc_client_ta_client.cpp  nbc_client_ta_client.hpp
nbc/nbc_cs/: CMakeLists.txt  nbc_cs_client.cpp  nbc_cs_client.hpp  nbc_cs_share_callback_param.cpp  nbc_cs_share_callback_param.hpp  nbc_cs_srv1.cpp  nbc_cs_srv1_callback_function.cpp  nbc_cs_srv1_callback_function.hpp  nbc_cs_srv1_state.cpp  nbc_cs_srv1_state.hpp  nbc_cs_ta_client.cpp  nbc_cs_ta_client.hpp
nbc/nbc_mp/: CMakeLists.txt  nbc_mp.cpp  nbc_mp.hpp  nbc_mp_cs_client.cpp  nbc_mp_cs_client.hpp  nbc_mp_model.cpp  nbc_mp_model.hpp
nbc/nbc_share/: CMakeLists.txt  nbc_basicdata.hpp  nbc_computeparam.cpp  nbc_computeparam.hpp  nbc_context.cpp  nbc_encdata.cpp  nbc_encdata.hpp  nbc_encmodel.hpp  nbc_packet.hpp  nbc_permvec.cpp  nbc_plaindata.cpp  nbc_plaindata.hpp  nbc_pubkey.cpp  nbc_pubkey.hpp  nbc_seckey.cpp  nbc_securekey_filemanager.cpp  nbc_securekey_filemanager.hpp  nbc_ta_client_base.cpp  nbc_utility.cpp  nbc_utility.hpp
nbc/nbc_ta/: CMakeLists.txt  nbc_ta_session.cpp  nbc_ta_session.hpp  nbc_ta_share_callback_param.cpp  nbc_ta_share_callback_param.hpp  nbc_ta_srv1.cpp  nbc_ta_srv1.hpp  (+7 more)
